--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,7 +1,8 @@
 // $primary-color: #4285f4;
 // $primary-color: #043b5c;
 // $primary-color: #2c3e50;
-$primary-gradient: linear-gradient(90deg, #004680, #4484BA);
+// $primary-gradient: linear-gradient(90deg, #004680, #4484BA);
+$primary-gradient: linear-gradient(90deg, #f9d07d, #cb4558);
 $primary-color: #004680;
 $white: #ffffff;
 $black: #0D0D0D;
